# databridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  pyproject.toml
2026-07-08/Eurotherm/2026-07-08/: eurotherm-2026-07-08T00-31-38.txt  eurotherm-2026-07-08T01-31-42.txt  eurotherm-2026-07-08T02-31-46.txt  eurotherm-2026-07-08T03-31-50.txt  eurotherm-2026-07-08T04-31-54.txt  eurotherm-2026-07-08T05-31-58.txt  eurotherm-2026-07-08T06-32-02.txt  eurotherm-2026-07-08T07-32-06.txt  eurotherm-2026-07-08T08-32-10.txt  eurotherm-2026-07-08T09-32-14.txt  eurotherm-2026-07-08T10-32-22.txt  eurotherm-2026-07-08T11-32-33.txt  eurotherm-2026-07-08T12-32-46.txt  eurotherm-2026-07-08T13-32-59.txt  eurotherm-2026-07-08T14-33-09.txt  eurotherm-2026-07-08T15-33-17.txt  eurotherm-2026-07-08T16-33-26.txt
2026-07-08/FTIR/2026-07-08/: 2026-07-08 163017 MKS-conc.prn
src/databridge/: cli.py  command.py  files.py  pipe.py  shell_command.py  ssh_command.py
