[project]
name = "databridge"
version = "0.1.0"
description = "DataBridge is a Python tool that automatically collects measurement data from distributed devices and applications, stores it in a central location, and optionally synchronizes it with a remote server for easy management and backup."
readme = "README.md"
authors = [
    { name = "thaeber", email = "thomas.haeber@kit.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "bump-my-version>=1.4.1",
    "click>=8.4.2",
    "dateparser>=1.4.1",
    "omegaconf>=2.3.1",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "pywinpty>=3.0.5",
    "rich>=15.0.0",
    "rich-click>=1.9.8",
    "tqdm>=4.68.4",
]

[project.scripts]
databridge = "databridge.cli:cli"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "git-changelog>=2.9.4",
    "ipykernel>=7.3.0",
    "pip>=26.1.2",
    "pre-commit>=4.6.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/databridge/__init__.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build"
template = "angular"
